fix redirect security issue

--- a/public/view/index.html
+++ b/public/view/index.html
@@ -27,7 +27,7 @@
 					<h5 class='instructions'>Someone is trying to share their Android screen with you.</h5>
 					<h5 class='instructions2'>Open this link in Chrome or download the Vysor Chrome app to connect.</h5>
 					<ul class="actions">
-						<li><a href="javascript:openDownload()" class="button special icon fa-download">Download Vysor</a></li>
+						<li><a href="javascript:openDownload('view')" class="button special icon fa-download">Download Vysor</a></li>
             <!-- <li><a href="#one" class="button icon fa-chevron-down scrolly">Learn More</a></li> -->
 					</ul>
 				</div>
